--- a/Titanic/Titanic2.ipynb
+++ b/Titanic/Titanic2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "4      0            373450   8.0500   NaN        S  treino  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "[1309 rows x 13 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "4            373450   8.0500   NaN         2  treino  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
        "(1309, 13)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "(418, 11)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
        "895  22.0      1      1  3101298  12.2875   NaN         2  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,11 +1159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_acc(Xtrain, Xvalid, ytrain, yvalid, SamplesLeaf=[10], LeafNodes=[4], RandomState=0):\n",
+    "def get_acc_DecisionTree(Xtrain, Xvalid, ytrain, yvalid, SamplesLeaf=[10], LeafNodes=[4], RandomState=0):\n",
     "    from sklearn.tree import DecisionTreeClassifier\n",
     "    from sklearn.metrics import accuracy_score\n",
     "    \n",
@@ -1196,20 +1196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Melhor min_samples_leaf: 14 com 0.8251 de acurácia\n",
-      "Melhor max_leaf_nodes: 8 com 0.8318 de acurácia\n"
+      "Melhor min_samples_leaf: 6 com 0.8094 de acurácia\n",
+      "Melhor max_leaf_nodes: 10 com 0.8229 de acurácia\n"
      ]
     }
    ],
    "source": [
-    "get_acc(X_treino, X_valid, y_treino, y_valid, SamplesLeaf=list(range(2,20, 2)), LeafNodes=list(range(2, 400, 2)))"
+    "get_acc_DecisionTree(X_treino, X_valid, y_treino, y_valid, SamplesLeaf=list(range(2,20, 2)), LeafNodes=list(range(2, 400, 2)))"
    ]
   },
   {
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "       1., 1., 1., 1., 1., 0., 1., 0., 0., 0.])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
        "       0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
        "(418,)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,11 +1340,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "sub.to_csv('Quarto_modelo.csv', header=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelo 5 - Random Forests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.804932735426009"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_treino, X_valid, y_treino, y_valid = train_test_split(treino[features], treino[target], random_state=0, test_size=0.5)\n",
+    "\n",
+    "modelo5 = RandomForestClassifier(n_estimators=100, n_jobs=-1, max_leaf_nodes=8, random_state=0)\n",
+    "modelo5.fit(X_treino, y_treino)\n",
+    "y_pred = modelo5.predict(X_valid)\n",
+    "acc = accuracy_score(y_valid, y_pred)\n",
+    "acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_acc_RandomForest(Xtrain, Xvalid, ytrain, yvalid, SamplesLeaf=[10], LeafNodes=[4], estimators=[100],RandomState=0):\n",
+    "    from sklearn.ensemble import RandomForestClassifier\n",
+    "    from sklearn.metrics import accuracy_score\n",
+    "    \n",
+    "    maior_acc_samples = 0\n",
+    "    melhor_sample = SamplesLeaf[0]\n",
+    "    for samples in SamplesLeaf:\n",
+    "        modelo = RandomForestClassifier(random_state=RandomState, min_samples_leaf=samples, n_jobs=-1)\n",
+    "        modelo.fit(Xtrain, ytrain)\n",
+    "        ypred = modelo.predict(Xvalid)\n",
+    "        accuracy = accuracy_score(ypred, yvalid)\n",
+    "        if accuracy > maior_acc_samples:\n",
+    "            maior_acc_samples = accuracy\n",
+    "            melhor_sample = samples\n",
+    "\n",
+    "    maior_acc_nodes = 0\n",
+    "    melhor_nodes = LeafNodes[0]\n",
+    "\n",
+    "    for nodes in LeafNodes:\n",
+    "        modelo = RandomForestClassifier(random_state=RandomState, max_leaf_nodes=nodes, n_jobs=-1)\n",
+    "        modelo.fit(Xtrain, ytrain)\n",
+    "        ypred = modelo.predict(Xvalid)\n",
+    "        accuracy = accuracy_score(ypred, yvalid)\n",
+    "        if accuracy > maior_acc_nodes:\n",
+    "            maior_acc_nodes = accuracy\n",
+    "            melhor_nodes = nodes\n",
+    "\n",
+    "    maior_acc_estimators = 0\n",
+    "    melhor_estimators = estimators[0]\n",
+    "\n",
+    "    for est in estimators:\n",
+    "        modelo = RandomForestClassifier(random_state=RandomState, n_estimators=est, n_jobs=-1)\n",
+    "        modelo.fit(Xtrain, ytrain)\n",
+    "        ypred = modelo.predict(Xvalid)\n",
+    "        accuracy = accuracy_score(ypred, yvalid)\n",
+    "        if accuracy > maior_acc_estimators:\n",
+    "            maior_acc_estimators = accuracy\n",
+    "            melhor_estimators = est\n",
+    "\n",
+    "    print(f'Melhor min_samples_leaf: {melhor_sample} com {maior_acc_samples:.4f} de acurácia')\n",
+    "    print(f'Melhor max_leaf_nodes: {melhor_nodes} com {maior_acc_nodes:.4f} de acurácia')\n",
+    "    print(f'Melhor n_estimators: {melhor_estimators} com {maior_acc_estimators:.4f} de acurácia')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Melhor min_samples_leaf: 6 com 0.8161 de acurácia\n",
+      "Melhor max_leaf_nodes: 30 com 0.8206 de acurácia\n",
+      "Melhor n_estimators: 40 com 0.8004 de acurácia\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_acc_RandomForest(X_treino, X_valid, y_treino, y_valid, SamplesLeaf=list(range(2,20, 2)), LeafNodes=list(range(2, 100, 2)), estimators=list(range(40, 241, 40)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8004484304932735"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#validação 1\n",
+    "modelo5 = RandomForestClassifier(random_state=0, max_leaf_nodes=30, n_estimators=40, n_jobs=-1)\n",
+    "modelo5.fit(X_treino, y_treino)\n",
+    "ypred = modelo5.predict(X_valid)\n",
+    "accuracy = accuracy_score(ypred, y_valid)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8094170403587444"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#validação 2\n",
+    "modelo5 = RandomForestClassifier(random_state=0, max_leaf_nodes=30, n_estimators=150, n_jobs=-1)\n",
+    "modelo5.fit(X_treino, y_treino)\n",
+    "ypred = modelo5.predict(X_valid)\n",
+    "accuracy = accuracy_score(ypred, y_valid)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8026905829596412"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#validação 3\n",
+    "modelo5 = RandomForestClassifier(random_state=0, n_estimators=150, min_samples_leaf=6, n_jobs=-1)\n",
+    "modelo5.fit(X_treino, y_treino)\n",
+    "ypred = modelo5.predict(X_valid)\n",
+    "accuracy = accuracy_score(ypred, y_valid)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.820627802690583"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#validação 4\n",
+    "modelo5 = RandomForestClassifier(random_state=0, max_leaf_nodes=30, n_jobs=-1)\n",
+    "modelo5.fit(X_treino, y_treino)\n",
+    "ypred = modelo5.predict(X_valid)\n",
+    "accuracy = accuracy_score(ypred, y_valid)\n",
+    "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Treinando o modelo 5 com a validação 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0,\n",
+       "       1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1,\n",
+       "       1, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0,\n",
+       "       1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+       "       0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1,\n",
+       "       0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0,\n",
+       "       1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0,\n",
+       "       1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0,\n",
+       "       0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0,\n",
+       "       1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1,\n",
+       "       0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_treino, y_treino = treino[features], treino[target]\n",
+    "X_teste = teste[features]\n",
+    "\n",
+    "modelo5 = RandomForestClassifier(random_state=0, max_leaf_nodes=30, n_jobs=-1)\n",
+    "modelo5.fit(X_treino, y_treino)\n",
+    "y_pred5 = modelo5.predict(X_teste)\n",
+    "\n",
+    "y_pred5 = y_pred5.astype(int)\n",
+    "\n",
+    "y_pred5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arquivo de submissão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_submission(pred, index='PassengerId', name='Survived', name_file='file.csv'):\n",
+    "    import pandas as pd\n",
+    "    sub = pd.Series(pred, index=teste[index], name=name)\n",
+    "    sub.to_csv(name_file, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_submission(y_pred5, name_file='Quinto_modelo.csv')"
    ]
   }
  ],
