--- a/Titanic/Titanic2.ipynb
+++ b/Titanic/Titanic2.ipynb
@@ -2062,7 +2062,7 @@
     "\n",
     "    return -accuracy_score(pred, y_valid)    #negativo pois a função de otimização é de minimização\n",
     "\n",
-    "space = [(1e-3, 1e-1, 'log-uniform'),  #learning_rate\n",
+    "space = [('constant', 'invscaling', 'adaptive'),  #learning_rate\n",
     "         (2, 128),  #num_leaves\n",
     "         (1, 100),  #min_child_samples\n",
     "         (0.05, 1.0),  #subsample\n",
